--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
 name: Cargo CI Checks
 on:
-  - push:
+  pull_request:
+  push:
     branches:
       - main
-  - pull_request:
 jobs:
   cargo_checks:
     runs-on: ubuntu-latest
