--- a/.github/workflows/cargo-build-docs.yml
+++ b/.github/workflows/cargo-build-docs.yml
@@ -5,10 +5,15 @@ on:
     branches:
       - main
 jobs:
-  cargo_checks:
+  cargo_docs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+      - uses: actions-rs/toolchain@v1
+        with:
+            toolchain: nightly
+            components: cargo
+            override: true
       - name: install-cargo-ghp-upload
         env:
           GHP_UPLOAD_VERSION: 0.3.2
@@ -24,6 +29,7 @@ jobs:
       - name: cargo-check
         uses: actions-rs/cargo@v1
         with:
+          toolchain: nightly
           token: ${{ secrets.GITHUB_TOKEN }}
           # env: 
           #   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
