Fix lints from travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ before_deploy:
 
 deploy:
   provider: pages
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN
-  keep-history: false
-  local-dir: public
+  cleanup: true
+  github_token: $GITHUB_TOKEN
+  keep_history: true
+  local_dir: public
   on:
     branch: main
