--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_deploy:
 
 deploy:
   provider: pages
-  cleanup: true
+  skip_cleanup: true
   github_token: $GITHUB_TOKEN
   keep_history: true
   local_dir: public
