Discard `main.rs` and update Cargo.toml for publish

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "plist-utils"
 description = "Utilities and libraries for dealing with property lists"
+categories = ["configuration", "parser-implementations", "encoding"]
+license = "MIT"
 version = "0.1.0"
 edition = "2021"
 
